api_v3/questionsplitter/L1Parser.py
# Generated from L1.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class L1Parser ( Parser ):

    grammarFileName = "L1.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [  ]

    symbolicNames = [ "<INVALID>", "ENDOFLIST", "NUMLIST_PREFIX", "LETTERLIST_PREFIX", 
                      "STAR_AFTER_DOT", "STAR_BEFORE_DOT", "STAR_BEFORE_LETTER", 
                      "TITLE", "POINTS", "TYPE", "RANDOMIZE", "WR_ANSWER", 
                      "END_ANSWER", "ALL_CHARACTER" ]

    RULE_l1 = 0
    RULE_sectionheading = 1
    RULE_rootlist = 2
    RULE_numlist = 3
    RULE_letterlist = 4
    RULE_question_header = 5
    RULE_letterlist_prefix_regular = 6
    RULE_letterlist_prefix_correct = 7
    RULE_endoflist = 8
    RULE_question_header_parameter = 9
    RULE_end_answers_block = 10
    RULE_wr_answers_block = 11
    RULE_end_answer_token = 12
    RULE_wr_answer_token = 13
    RULE_end_answers_item = 14
    RULE_numlist_prefix = 15
    RULE_title = 16
    RULE_points = 17
    RULE_questiontype = 18
    RULE_randomize = 19
    RULE_content = 20

    ruleNames =  [ "l1", "sectionheading", "rootlist", "numlist", "letterlist", 
                   "question_header", "letterlist_prefix_regular", "letterlist_prefix_correct", 
                   "endoflist", "question_header_parameter", "end_answers_block", 
                   "wr_answers_block", "end_answer_token", "wr_answer_token", 
                   "end_answers_item", "numlist_prefix", "title", "points", 
                   "questiontype", "randomize", "content" ]

    EOF = Token.EOF
    ENDOFLIST=1
    NUMLIST_PREFIX=2
    LETTERLIST_PREFIX=3
    STAR_AFTER_DOT=4
    STAR_BEFORE_DOT=5
    STAR_BEFORE_LETTER=6
    TITLE=7
    POINTS=8
    TYPE=9
    RANDOMIZE=10
    WR_ANSWER=11
    END_ANSWER=12
    ALL_CHARACTER=13

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class L1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(L1Parser.EOF, 0)

        def sectionheading(self):
            return self.getTypedRuleContext(L1Parser.SectionheadingContext,0)


        def rootlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(L1Parser.RootlistContext)
            else:
                return self.getTypedRuleContext(L1Parser.RootlistContext,i)


        def end_answers_block(self):
            return self.getTypedRuleContext(L1Parser.End_answers_blockContext,0)


        def getRuleIndex(self):
            return L1Parser.RULE_l1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL1" ):
                listener.enterL1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL1" ):
                listener.exitL1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitL1" ):
                return visitor.visitL1(self)
            else:
                return visitor.visitChildren(self)




    def l1(self):

        localctx = L1Parser.L1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_l1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==L1Parser.ALL_CHARACTER:
                self.state = 42
                self.sectionheading()


            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << L1Parser.NUMLIST_PREFIX) | (1 << L1Parser.LETTERLIST_PREFIX) | (1 << L1Parser.STAR_AFTER_DOT) | (1 << L1Parser.STAR_BEFORE_DOT) | (1 << L1Parser.STAR_BEFORE_LETTER) | (1 << L1Parser.TITLE) | (1 << L1Parser.POINTS) | (1 << L1Parser.TYPE) | (1 << L1Parser.RANDOMIZE))) != 0):
                self.state = 45
                self.rootlist()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==L1Parser.END_ANSWER:
                self.state = 51
                self.end_answers_block()


            self.state = 54
            self.match(L1Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SectionheadingContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def content(self):
            return self.getTypedRuleContext(L1Parser.ContentContext,0)


        def getRuleIndex(self):
            return L1Parser.RULE_sectionheading

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSectionheading" ):
                listener.enterSectionheading(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSectionheading" ):
                listener.exitSectionheading(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSectionheading" ):
                return visitor.visitSectionheading(self)
            else:
                return visitor.visitChildren(self)




    def sectionheading(self):

        localctx = L1Parser.SectionheadingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sectionheading)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.content()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RootlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numlist(self):
            return self.getTypedRuleContext(L1Parser.NumlistContext,0)


        def letterlist(self):
            return self.getTypedRuleContext(L1Parser.LetterlistContext,0)


        def question_header(self):
            return self.getTypedRuleContext(L1Parser.Question_headerContext,0)


        def endoflist(self):
            return self.getTypedRuleContext(L1Parser.EndoflistContext,0)


        def wr_answers_block(self):
            return self.getTypedRuleContext(L1Parser.Wr_answers_blockContext,0)


        def getRuleIndex(self):
            return L1Parser.RULE_rootlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRootlist" ):
                listener.enterRootlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRootlist" ):
                listener.exitRootlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRootlist" ):
                return visitor.visitRootlist(self)
            else:
                return visitor.visitChildren(self)




    def rootlist(self):

        localctx = L1Parser.RootlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_rootlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << L1Parser.TITLE) | (1 << L1Parser.POINTS) | (1 << L1Parser.TYPE) | (1 << L1Parser.RANDOMIZE))) != 0):
                self.state = 58
                self.question_header()


            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [L1Parser.NUMLIST_PREFIX]:
                self.state = 61
                self.numlist()
                pass
            elif token in [L1Parser.LETTERLIST_PREFIX, L1Parser.STAR_AFTER_DOT, L1Parser.STAR_BEFORE_DOT, L1Parser.STAR_BEFORE_LETTER]:
                self.state = 62
                self.letterlist()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==L1Parser.ENDOFLIST:
                self.state = 65
                self.endoflist()


            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==L1Parser.WR_ANSWER:
                self.state = 68
                self.wr_answers_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numlist_prefix(self):
            return self.getTypedRuleContext(L1Parser.Numlist_prefixContext,0)


        def content(self):
            return self.getTypedRuleContext(L1Parser.ContentContext,0)


        def getRuleIndex(self):
            return L1Parser.RULE_numlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumlist" ):
                listener.enterNumlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumlist" ):
                listener.exitNumlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumlist" ):
                return visitor.visitNumlist(self)
            else:
                return visitor.visitChildren(self)




    def numlist(self):

        localctx = L1Parser.NumlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_numlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.numlist_prefix()
            self.state = 72
            self.content()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetterlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def content(self):
            return self.getTypedRuleContext(L1Parser.ContentContext,0)


        def letterlist_prefix_regular(self):
            return self.getTypedRuleContext(L1Parser.Letterlist_prefix_regularContext,0)


        def letterlist_prefix_correct(self):
            return self.getTypedRuleContext(L1Parser.Letterlist_prefix_correctContext,0)


        def getRuleIndex(self):
            return L1Parser.RULE_letterlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetterlist" ):
                listener.enterLetterlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetterlist" ):
                listener.exitLetterlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetterlist" ):
                return visitor.visitLetterlist(self)
            else:
                return visitor.visitChildren(self)




    def letterlist(self):

        localctx = L1Parser.LetterlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_letterlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [L1Parser.LETTERLIST_PREFIX]:
                self.state = 74
                self.letterlist_prefix_regular()
                pass
            elif token in [L1Parser.STAR_AFTER_DOT, L1Parser.STAR_BEFORE_DOT, L1Parser.STAR_BEFORE_LETTER]:
                self.state = 75
                self.letterlist_prefix_correct()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 78
            self.content()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Question_headerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def question_header_parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(L1Parser.Question_header_parameterContext)
            else:
                return self.getTypedRuleContext(L1Parser.Question_header_parameterContext,i)


        def getRuleIndex(self):
            return L1Parser.RULE_question_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuestion_header" ):
                listener.enterQuestion_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuestion_header" ):
                listener.exitQuestion_header(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuestion_header" ):
                return visitor.visitQuestion_header(self)
            else:
                return visitor.visitChildren(self)




    def question_header(self):

        localctx = L1Parser.Question_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_question_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 80
                self.question_header_parameter()
                self.state = 83 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << L1Parser.TITLE) | (1 << L1Parser.POINTS) | (1 << L1Parser.TYPE) | (1 << L1Parser.RANDOMIZE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Letterlist_prefix_regularContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LETTERLIST_PREFIX(self):
            return self.getToken(L1Parser.LETTERLIST_PREFIX, 0)

        def getRuleIndex(self):
            return L1Parser.RULE_letterlist_prefix_regular

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetterlist_prefix_regular" ):
                listener.enterLetterlist_prefix_regular(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetterlist_prefix_regular" ):
                listener.exitLetterlist_prefix_regular(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetterlist_prefix_regular" ):
                return visitor.visitLetterlist_prefix_regular(self)
            else:
                return visitor.visitChildren(self)




    def letterlist_prefix_regular(self):

        localctx = L1Parser.Letterlist_prefix_regularContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_letterlist_prefix_regular)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(L1Parser.LETTERLIST_PREFIX)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Letterlist_prefix_correctContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STAR_AFTER_DOT(self):
            return self.getToken(L1Parser.STAR_AFTER_DOT, 0)

        def STAR_BEFORE_DOT(self):
            return self.getToken(L1Parser.STAR_BEFORE_DOT, 0)

        def STAR_BEFORE_LETTER(self):
            return self.getToken(L1Parser.STAR_BEFORE_LETTER, 0)

        def getRuleIndex(self):
            return L1Parser.RULE_letterlist_prefix_correct

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetterlist_prefix_correct" ):
                listener.enterLetterlist_prefix_correct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetterlist_prefix_correct" ):
                listener.exitLetterlist_prefix_correct(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetterlist_prefix_correct" ):
                return visitor.visitLetterlist_prefix_correct(self)
            else:
                return visitor.visitChildren(self)




    def letterlist_prefix_correct(self):

        localctx = L1Parser.Letterlist_prefix_correctContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_letterlist_prefix_correct)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << L1Parser.STAR_AFTER_DOT) | (1 << L1Parser.STAR_BEFORE_DOT) | (1 << L1Parser.STAR_BEFORE_LETTER))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndoflistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENDOFLIST(self):
            return self.getToken(L1Parser.ENDOFLIST, 0)

        def getRuleIndex(self):
            return L1Parser.RULE_endoflist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndoflist" ):
                listener.enterEndoflist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndoflist" ):
                listener.exitEndoflist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEndoflist" ):
                return visitor.visitEndoflist(self)
            else:
                return visitor.visitChildren(self)




    def endoflist(self):

        localctx = L1Parser.EndoflistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_endoflist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(L1Parser.ENDOFLIST)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Question_header_parameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def points(self):
            return self.getTypedRuleContext(L1Parser.PointsContext,0)


        def content(self):
            return self.getTypedRuleContext(L1Parser.ContentContext,0)


        def title(self):
            return self.getTypedRuleContext(L1Parser.TitleContext,0)


        def questiontype(self):
            return self.getTypedRuleContext(L1Parser.QuestiontypeContext,0)


        def randomize(self):
            return self.getTypedRuleContext(L1Parser.RandomizeContext,0)


        def getRuleIndex(self):
            return L1Parser.RULE_question_header_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuestion_header_parameter" ):
                listener.enterQuestion_header_parameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuestion_header_parameter" ):
                listener.exitQuestion_header_parameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuestion_header_parameter" ):
                return visitor.visitQuestion_header_parameter(self)
            else:
                return visitor.visitChildren(self)




    def question_header_parameter(self):

        localctx = L1Parser.Question_header_parameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_question_header_parameter)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [L1Parser.POINTS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.points()
                self.state = 92
                self.content()
                pass
            elif token in [L1Parser.TITLE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.title()
                self.state = 95
                self.content()
                pass
            elif token in [L1Parser.TYPE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.questiontype()
                self.state = 98
                self.content()
                pass
            elif token in [L1Parser.RANDOMIZE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 100
                self.randomize()
                self.state = 101
                self.content()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class End_answers_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def end_answer_token(self):
            return self.getTypedRuleContext(L1Parser.End_answer_tokenContext,0)


        def end_answers_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(L1Parser.End_answers_itemContext)
            else:
                return self.getTypedRuleContext(L1Parser.End_answers_itemContext,i)


        def getRuleIndex(self):
            return L1Parser.RULE_end_answers_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnd_answers_block" ):
                listener.enterEnd_answers_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnd_answers_block" ):
                listener.exitEnd_answers_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnd_answers_block" ):
                return visitor.visitEnd_answers_block(self)
            else:
                return visitor.visitChildren(self)




    def end_answers_block(self):

        localctx = L1Parser.End_answers_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_end_answers_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.end_answer_token()
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==L1Parser.NUMLIST_PREFIX or _la==L1Parser.ALL_CHARACTER:
                self.state = 106
                self.end_answers_item()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Wr_answers_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def wr_answer_token(self):
            return self.getTypedRuleContext(L1Parser.Wr_answer_tokenContext,0)


        def content(self):
            return self.getTypedRuleContext(L1Parser.ContentContext,0)


        def getRuleIndex(self):
            return L1Parser.RULE_wr_answers_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWr_answers_block" ):
                listener.enterWr_answers_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWr_answers_block" ):
                listener.exitWr_answers_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWr_answers_block" ):
                return visitor.visitWr_answers_block(self)
            else:
                return visitor.visitChildren(self)




    def wr_answers_block(self):

        localctx = L1Parser.Wr_answers_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_wr_answers_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.wr_answer_token()
            self.state = 113
            self.content()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class End_answer_tokenContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def END_ANSWER(self):
            return self.getToken(L1Parser.END_ANSWER, 0)

        def getRuleIndex(self):
            return L1Parser.RULE_end_answer_token

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnd_answer_token" ):
                listener.enterEnd_answer_token(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnd_answer_token" ):
                listener.exitEnd_answer_token(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnd_answer_token" ):
                return visitor.visitEnd_answer_token(self)
            else:
                return visitor.visitChildren(self)




    def end_answer_token(self):

        localctx = L1Parser.End_answer_tokenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_end_answer_token)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(L1Parser.END_ANSWER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Wr_answer_tokenContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WR_ANSWER(self):
            return self.getToken(L1Parser.WR_ANSWER, 0)

        def getRuleIndex(self):
            return L1Parser.RULE_wr_answer_token

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWr_answer_token" ):
                listener.enterWr_answer_token(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWr_answer_token" ):
                listener.exitWr_answer_token(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWr_answer_token" ):
                return visitor.visitWr_answer_token(self)
            else:
                return visitor.visitChildren(self)




    def wr_answer_token(self):

        localctx = L1Parser.Wr_answer_tokenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_wr_answer_token)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(L1Parser.WR_ANSWER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class End_answers_itemContext(ParserRuleContext):
